--- a/usbSerialForAndroid/build.gradle
+++ b/usbSerialForAndroid/build.gradle
@@ -24,13 +24,13 @@ android {
 }
 
 dependencies {
-    implementation "androidx.annotation:annotation:1.3.0"
+    implementation "androidx.annotation:annotation:1.5.0"
     implementation 'androidx.test:core:1.4.0'
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'org.mockito:mockito-core:4.8.1'
     androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'commons-net:commons-net:3.8.0'
-    androidTestImplementation 'org.apache.commons:commons-lang3:3.11'
+    androidTestImplementation 'commons-net:commons-net:20030805.205232'
+    androidTestImplementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 // gradle task: publishToMavenLocal
