--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,15 @@
 // Top-level gradle script.
 
 buildscript {
+    ext {
+        agp_version = '7.4.0'
+    }
     repositories {
         mavenCentral()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath "com.android.tools.build:gradle:$agp_version"
     }
 }
 
