--- a/usbSerialExamples/build.gradle
+++ b/usbSerialExamples/build.gradle
@@ -16,6 +16,11 @@ android {
         vectorDrawables.useSupportLibrary = true
 
         missingDimensionStrategy 'device', 'anyDevice'
+        applicationId 'Hoot_UI'
+        applicationIdSuffix 'UI'
+        versionCode 1
+        versionName 'working'
+        versionNameSuffix '1'
     }
 
     buildTypes {
@@ -25,6 +30,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        buildConfig = true
     }
     configurations.implementation {
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
